--- a/gallery.html
+++ b/gallery.html
@@ -112,24 +112,24 @@
 
         <nav id="navbar" class="navbar order-last order-lg-0">
           <ul>
-            <li><a class="nav-link scrollto" href="/index.html">Home</a></li>
-            <li><a class="nav-link scrollto" href="/about.html">About</a></li>
+            <li><a class="nav-link scrollto" href="./index.html">Home</a></li>
+            <li><a class="nav-link scrollto" href="./about.html">About</a></li>
             <li>
               <a class="nav-link scrollto" href="./Inter_Prep.html"
                 >Interview Prep</a
               >
             </li>
-            <li><a class="nav-link scrollto" href="/events.html">Events</a></li>
+            <li><a class="nav-link scrollto" href="./events.html">Events</a></li>
             <li>
-              <a class="nav-link scrollto" href="/practice.html">Practice</a>
+              <a class="nav-link scrollto" href="./practice.html">Practice</a>
             </li>
             <li>
-              <a class="nav-link scrollto active" href="/gallery.html"
+              <a class="nav-link scrollto active" href="./gallery.html"
                 >Gallery</a
               >
             </li>
             <li>
-              <a class="nav-link scrollto" href="/walloffame.html"
+              <a class="nav-link scrollto" href="./walloffame.html"
                 >Wall Of Fame</a
               >
             </li>
