--- a/practice.html
+++ b/practice.html
@@ -541,13 +541,13 @@
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
-          <li><a class='nav-link scrollto' href='/'>Home</a></li>
-          <li><a class='nav-link scrollto' href='/about'>About</a></li>
-          <li><a class='nav-link scrollto' href='/inter_prep'>Interview Prep</a></li>
-          <li><a class='nav-link scrollto' href='/events'>Events</a></li>
-          <li><a class='nav-link scrollto active ' href='/practice'>Practice</a></li>
-          <li><a class='nav-link scrollto' href='/gallery'>Gallery</a></li>
-          <li><a class='nav-link scrollto' href='/walloffame'>Wall Of Fame</a></li>
+          <li><a class='nav-link scrollto' href='./index.html'>Home</a></li>
+          <li><a class='nav-link scrollto' href='./about.html'>About</a></li>
+          <li><a class='nav-link scrollto' href='./Inter_Prep.html'>Interview Prep</a></li>
+          <li><a class='nav-link scrollto' href='./events.html'>Events</a></li>
+          <li><a class='nav-link scrollto active ' href='./practice.html'>Practice</a></li>
+          <li><a class='nav-link scrollto' href='./gallery.html'>Gallery</a></li>
+          <li><a class='nav-link scrollto' href='./walloffame.html'>Wall Of Fame</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav>
