[MeetUp Page] Fixed Redirect Link back to events page

--- a/meetup.html
+++ b/meetup.html
@@ -95,7 +95,7 @@
           <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
             <button
               class="animated-button"
-              onclick="window.location.href='./index.html'"
+              onclick="window.location.href='./events.html'"
             >
               <span class="text">View Events</span>
               <span class="circle"></span>
