--- a/meetup.html
+++ b/meetup.html
@@ -49,6 +49,549 @@
 
   <link href="assets/css/style.css" rel="stylesheet">
   <link rel="stylesheet" href="./assets/css/meetup.css">
+
+  <style>
+    * {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  color: #333;
+  font-family:"Open Sans", sans-serif;
+}
+/* 
+#header {
+  position: fixed !important;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 74px;
+  background: rgba(0,0,0,0.9);
+  backdrop-filter: blur(6px);
+  z-index: 99999;
+} */
+
+
+
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100dvh;
+  overflow-y: auto;
+  overflow-x: hidden;
+  opacity: 0;
+  background-color: #0b0b0b; 
+  color: #e5e5e5;
+  opacity: 0;
+  transition: opacity 0.8s ease-out;
+}
+
+body.page-loaded {
+  opacity: 1;
+}
+
+.hero-content h1,
+.hero-content p {
+  color: #fff;
+  text-shadow: 0 2px 10px rgba(0, 0, 0, 0.6);
+}
+
+@media (max-width: 576px) {
+  .hero-content h1 { font-size: 2.2rem; }
+  .hero-content p  { font-size: 1rem; }
+  .header-img { width: 100%; }
+}
+
+.calendar-wrapper { max-width: 220px; }
+
+.flip-calendar { border-radius: 12px; overflow: hidden; }
+
+.flip-box {
+  position: relative;
+  width: 120px;
+  height: 100px;
+  margin: auto;
+  perspective: 800px;
+}
+
+.flip-face {
+  position: absolute;
+  inset: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 3rem;
+  font-weight: 700;
+  background: #fff;
+  border-radius: 10px;
+  backface-visibility: hidden;
+  transition: transform 0.6s ease;
+}
+
+.flip-face.back { transform: rotateX(180deg); }
+.flip-box.flip .front { transform: rotateX(-180deg); }
+.flip-box.flip .back  { transform: rotateX(0deg); }
+
+@media (max-width: 576px) {
+  .flip-box { width: 100px; height: 90px; }
+  .calendar-wrapper { max-width: 100%; margin-top: 10px; }
+}
+
+.date-input {
+  padding: 10px;
+  font-size: 1rem;
+  border-radius: 5px;
+  border: 1px solid #eee;
+  outline-color: rgb(62, 61, 62);
+  background-color: rgb(222, 215, 215);
+}
+
+.datepicker-container {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 2rem auto;
+}
+
+.datepicker {
+  position: absolute;
+  top: 100%;
+  z-index: 100;
+  margin-top: 2px;
+  background: #fff;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.datepicker button {
+  cursor: pointer;
+  border: none;
+  border-radius: 3px;
+  background: transparent;
+  font-size: 14px;
+  font-weight: 500;
+  text-transform: uppercase;
+  touch-action: manipulation;
+}
+
+.days, .dates {
+  display: grid;
+  grid-template-columns: repeat(7, 32px);
+  gap: 10px;
+  margin-block: 10px;
+}
+
+.days span {
+  font-size: 14px;
+  font-weight: 600;
+  text-transform: uppercase;
+  text-align: center;
+}
+
+.dates button {
+  color: slategray;
+  aspect-ratio: 1;
+}
+
+.dates button:disabled {
+  opacity: 0.5;
+  pointer-events: none;
+  user-select: none;
+}
+.dates button:hover { background: rgba(119,136,153,0.1); }
+
+.dates button.today {
+  background: rgba(147,112,216,0.2);
+  color: mediumpurple;
+}
+
+.dates button.selected {
+  background: #ffc451;
+  color: #fff;
+}
+
+.datepicker-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-bottom: 10px;
+  border-bottom: 1px solid #eee;
+}
+
+.datepicker-header select,
+.datepicker-header input {
+  font-size: 14px;
+  border: 1px solid #eee;
+  outline-color: mediumpurple;
+  max-width: 64px;
+}
+
+.datepicker-header button { color: slategray; }
+.datepicker-header button:hover { color: mediumpurple; }
+
+.datepicker-footer {
+  display: flex;
+  justify-content: flex-end;
+  gap: 10px;
+  padding-top: 10px;
+  border-top: 1px solid #eee;
+}
+
+.datepicker-footer button { background: rgba(119,136,153,0.1); padding: 3px 10px; }
+.datepicker-footer button.apply { background: #ffc451; color: #fff; }
+
+.datepicker .dates button.highlighted {
+  background-color: #ffc451;
+  color: black;
+  font-weight: bold;
+  border-radius: 6px;
+}
+.datepicker .dates button.highlighted:hover { background-color: #d4af37; }
+
+.object-fit-cover { object-fit: cover; height: 100%; }
+.crop-image { border-radius: 15px; }
+
+.animated-button {
+  position: relative;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  padding: 12px 28px;
+  border: 0;
+  font-size: 16px;
+  background-color: #ffc451;
+  color: #111;
+  border-radius: 100px;
+  font-weight: 600;
+  cursor: pointer;
+  overflow: hidden;
+  text-decoration: none;
+  transition: all 0.6s cubic-bezier(0.23,1,0.32,1);
+}
+.animated-button .circle {
+  position: absolute;
+  top: 50%; left: 50%;
+  transform: translate(-50%, -50%);
+  width: 20px; height: 20px;
+  border-radius: 50%;
+  background-color: #ffc451;
+  opacity: 0;
+  transition: all 0.8s cubic-bezier(0.23,1,0.32,1);
+}
+.animated-button .text { position: relative; z-index: 2; transform: none !important; transition: none !important; }
+.animated-button:hover { background-color: #ffc451; color: #000; border-radius: 12px; }
+.animated-button:hover .circle { width: 220px; height: 220px; opacity: 1; }
+.animated-button:active { transform: scale(0.95); }
+
+.cssbuttons-io-button {
+  background: #a370f0;
+  color: white;
+  font-family: inherit;
+  padding: 0.35em 3.3em 0.35em 1.2em;
+  font-size: 17px;
+  font-weight: 500;
+  border-radius: 0.9em;
+  border: none;
+  letter-spacing: 0.05em;
+  display: flex;
+  align-items: center;
+  box-shadow: inset 0 0 1.6em -0.6em #714da6;
+  overflow: hidden;
+  position: relative;
+  height: 2.8em;
+  cursor: pointer;
+}
+.cssbuttons-io-button .icon {
+  background: white;
+  position: absolute;
+  right: 0.3em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 2.2em;
+  width: 2.2em;
+  border-radius: 0.7em;
+  box-shadow: 0.1em 0.1em 0.6em 0.2em #7b52b9;
+  transition: all 0.3s;
+}
+.cssbuttons-io-button .icon svg { width: 1.1em; transition: transform 0.3s; color: #7b52b9; }
+.cssbuttons-io-button:hover .icon { width: calc(100% - 0.6em); }
+.cssbuttons-io-button:hover .icon svg { transform: translateX(0.1em); }
+
+.stagger-dropdown { position: relative; display: inline-block; margin: 1rem; }
+.stagger-btn {
+  display: flex; align-items: center; gap: 8px;
+  background: #111; color: #ffc451; border: 1px solid #333;
+  padding: 10px 16px; border-radius: 6px; font-size: 14px;
+  cursor: pointer; transition: background 0.25s ease, transform 0.18s ease;
+}
+.stagger-btn:hover { background: #ffc451; color: #000; }
+.stagger-icon { transition: transform 300ms cubic-bezier(.4,0,.2,1); transform-origin: center; }
+
+.stagger-menu {
+  position: absolute; top: calc(100% + 8px); left: 0; width: max-content;
+  min-width: 160px; padding: 8px; margin: 0; list-style: none;
+  background: #1a1a1a; border: 1px solid #333; border-radius: 8px;
+  transform-origin: top center; transform: scaleY(0); opacity: 0;
+  pointer-events: none; transition: transform 300ms cubic-bezier(.2,.8,.2,1), opacity 220ms ease;
+  box-shadow: 0 8px 30px rgba(255,215,0,0.15); z-index: 100; overflow: hidden;
+}
+.stagger-dropdown.open .stagger-menu { transform: scaleY(1); opacity: 1; pointer-events: auto; }
+.stagger-dropdown.open .stagger-icon { transform: rotate(180deg); }
+.stagger-item {
+  padding: 8px 12px; cursor: pointer; font-size: 14px; color: #f5f5f5; border-radius: 6px;
+  transform: translateY(-8px); opacity: 0; transition: transform 320ms cubic-bezier(.2,.8,.2,1), opacity 320ms ease;
+  display: flex; align-items: center; gap: 8px;
+}
+.stagger-item:hover { background: #333; color: #ffc451; }
+.stagger-dropdown.open .stagger-item:nth-child(1) { transition-delay: 60ms; transform: translateY(0); opacity: 1; }
+.stagger-dropdown.open .stagger-item:nth-child(2) { transition-delay: 120ms; transform: translateY(0); opacity: 1; }
+.stagger-dropdown.open .stagger-item:nth-child(3) { transition-delay: 180ms; transform: translateY(0); opacity: 1; }
+
+.search-box { position: relative; width: 30rem; }
+.search-box input {
+  background-color: #111; border: 1px solid #333; color: #f5f5f5; padding-right: 40px;
+}
+.search-box input::placeholder { color: #888; }
+.search-box .search-icon { position: absolute; top: 50%; right: 10px; transform: translateY(-50%); cursor: pointer; color: #60a5fa; }
+
+.carousel-item .row {
+  display: flex;
+  justify-content: center;
+  flex-wrap: nowrap;
+}
+
+.meetup-card {
+  position: relative;
+  display: flex;
+  justify-content: center;
+
+  flex: 0 0 33.333%;
+  max-width: 33.333%;
+  height: 420px;
+
+  border-radius: 1rem;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  overflow: hidden;
+
+  cursor: pointer;
+  box-shadow: 0 4px 12px rgba(255,215,0,0.2);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.meetup-card:hover {
+  transform: scale(1.03);
+  box-shadow: 0 12px 24px rgba(255,215,0,0.4);
+}
+
+@media (max-width: 1200px) {
+  .meetup-card { flex: 0 0 50%; max-width: 50%; }
+}
+
+@media (max-width: 768px) {
+  .meetup-card { flex: 0 0 100%; max-width: 100%; height: auto; }
+}
+
+@media (max-width: 576px) {
+  .carousel-item .row { flex-wrap: nowrap; overflow-x: hidden; }
+  .carousel-item .meetup-card { flex: 0 0 100%; max-width: 100%; }
+  .blog-card-img { height: 220px; width: 100%; object-fit: cover; }
+}
+
+.meetup-card.is-selected {
+  flex: 0 0 100%;
+  max-width: 100%;
+}
+
+@media (min-width: 992px) {
+  .meetup-card.is-selected { height: auto; display: flex; justify-content: center; }
+  .meetup-card.is-selected .m-card { width: 100%; max-width: 900px; margin: 0 auto; }
+  .meetup-card.is-selected .blog-card-img { height: 300px; width: 100%; object-fit: cover; display: block; }
+  .meetup-card.is-selected .card-body { padding: 1rem 1.25rem; text-align: left; }
+}
+
+.m-card { height: 100%; border: 1px solid #dccfcf; border-radius: 8px; }
+.m-card img { border-radius: 8px; }
+.blog-card-img { height: 300px; width: 100%; object-fit: cover; }
+
+.meetup-body { padding: 12px; }
+
+.row.align-items-stretch > [class*="col-"] { display: flex; align-items: stretch; }
+
+.carousel-btn:hover { background: #ffc451; color: #000; }
+.carousel-btn.prev { position: absolute; left: -55px; }
+.carousel-btn.next { position: absolute; right: -55px; }
+
+.dot-expand-btn {
+  display: inline-flex; align-items: center; gap: 0.5rem; height: 2.5rem;
+  border-radius: 9999px; background-color: #111; padding: 0 1rem; cursor: pointer;
+  transition: all 0.3s cubic-bezier(.4,0,.2,1); color: #ffc451; border: 1px solid #333;
+}
+.dot-expand-btn:hover { background-color: #ffc451; color: #000; }
+
+.navbar, .navbar .container, .stagger-dropdown { overflow: visible !important; }
+.stagger-menu { max-height: none !important; overflow: visible !important; z-index: 9999 !important; }
+
+@media (max-width: 768px) {
+  .stagger-btn { font-size: 13px; padding: 8px 12px; }
+  .carousel-btn.prev, .carousel-btn.next { left: 10px; right: 10px; }
+}
+
+@media (max-width: 480px) {
+  .animated-button { font-size: 14px; padding: 10px 20px; }
+  .dot-expand-btn { font-size: 0.9rem; padding: 0 .75rem; }
+  .main-container { flex-direction: column; gap: 20px; padding: 15px; }
+  .register-btn { font-size: 0.95rem; padding: 10px; }
+}
+
+
+/* #header {
+  position: fixed !important;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 74px;
+  z-index: 99999;
+  background: rgba(0, 0, 0, 0.95);
+} */
+
+/* FORCE navbar to follow header */
+#header #navbar {
+  position: static !important;   /* important */
+}
+
+
+
+#hero {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  background: url("assets/img/hero-bg.jpg") center center / cover no-repeat;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  z-index: 10000;
+}
+
+.hero-content {
+  position: relative;
+  z-index: 2;
+  text-align: center;
+  color: #fff;
+  font-family: "Poppins", sans-serif;
+}
+
+@media (min-width: 1024px) {
+    #hero #index-hero {
+        font-size: 98px;
+        line-height: 54px;
+    }
+}
+
+.hero-content p {
+  font-size: 1.2rem;
+  font-weight: 400;
+  opacity: 0.9;
+}
+
+
+#hero .container {
+  text-align: center;
+  align-items: center;
+}
+
+.animated {
+  animation: up-down 2s ease-in-out infinite;
+}
+
+#hero {
+  width: 100%;
+  height: 100vh;
+  background: url("./assets/img/hero-bg.jpg") top center / cover no-repeat;
+  position: relative;
+}
+
+#hero:before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background: rgba(0, 0, 0, 0.6);
+}
+
+#hero .container {
+  position: relative;
+  z-index: 2;
+  padding-top: 74px;
+  text-align: center;
+}
+
+#hero h1 {
+  margin: 0;
+  font-size: 56px;
+  font-weight: 700;
+  line-height: 64px;
+  color: #fff;
+  font-family: "Poppins", sans-serif;
+}
+
+#hero h2 {
+  color: rgba(255, 255, 255, 0.9);
+  font-size: 24px;
+}
+
+.hero-btn {
+  margin-top: 20px;
+}
+
+@media (max-width: 768px) {
+    #hero h1 {
+        font-size: 42px;
+        line-height: 36px;
+    }
+}
+
+#hero h2,
+#hero h3 {
+    color: rgba(255, 255, 255, 0.9);
+    margin: 10px 0 0 0;
+    font-size: 24px;
+}
+
+@media (max-width: 576px) {
+  .hero-btn {
+    display: flex !important;
+    justify-content: center;
+  }
+
+  .hero-btn .animated-button {
+    width: auto;
+  }
+}
+
+.meetup-card {
+  width: fit-content;
+  max-width: 100%;
+}
+
+#header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 74px;
+  background: rgba(0, 0, 0, 0.95);
+  z-index: 99999;
+}
+
+
+
+  </style>
+
+
   <script src="https://cdn.jsdelivr.net/npm/confetti-js@0.0.18/dist/index.min.js"></script>
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-3M7SMRS80F"></script>
@@ -68,10 +611,10 @@
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
-          <li><a class="nav-link scrollto active" href="./index.html">Home</a></li>
+          <li><a class="nav-link scrollto" href="./index.html">Home</a></li>
           <li><a class="nav-link scrollto" href="./about.html">About</a></li>
           <li><a class="nav-link scrollto" href="./Inter_Prep.html">Interview Prep</a></li>
-          <li><a class="nav-link scrollto " href="./events.html">Events</a></li>
+          <li><a class="nav-link scrollto active" href="./events.html">Events</a></li>
           <li><a class="nav-link scrollto " href="./practice.html">Practice</a></li>
           <li><a class="nav-link scrollto" href="./gallery.html">Gallery</a></li>
           <li><a class="nav-link scrollto" href="./walloffame.html">Wall Of Fame</a></li>
@@ -81,29 +624,21 @@
 
     </div>
   </header>
-    <div class="hero-wrapper">
-      <img src="./assets/img/hero-bg.jpg" alt="bg-img" class="header-img" />
+  
+  <section id="hero">
+  <div class="container" data-aos="fade-up">
+    <h1>Coders Forum</h1>
+    <h2>Meetups, Contests, Challenges and more...</h2>
 
-      <div class="px-4 pt-5 text-center border-bottom hero-content">
-        <h1 class="display-4 fw-bold">Our Community Meetups</h1>
-
-        <div class="col-lg-6 mx-auto">
-          <p class="lead mb-4">
-            Weekly meetups, monthly contests, seasonal challenges and more...
-          </p>
-
-          <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
-            <button
-              class="animated-button"
-              onclick="window.location.href='./index.html'"
-            >
-              <span class="text">View Events</span>
-              <span class="circle"></span>
-            </button>
-          </div>
-        </div>
-      </div>
+    <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5 hero-btn">
+      <button class="animated-button" onclick="window.location.href='./events.html'">
+        <span class="text">View Events</span>
+        <span class="circle"></span>
+      </button>
     </div>
+  </div>
+</section>
+
 
     <div class="container">
       <div class="px-4 pt-5 text-center">
@@ -398,8 +933,17 @@
     </div>
   </footer>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
     <script src="./assets/js/meetup.js"></script>
+     <script>
+  AOS.init({
+    duration: 900,
+    easing: "ease-out-cubic",
+    once: true
+  });
+</script>
+
   </body>
 </html>
