image size reduced

--- a/about.html
+++ b/about.html
@@ -547,7 +547,7 @@
       <div class="col-lg-3 col-md-4 col-sm-6">
         <a href="https://www.linkedin.com/in/avinash2608/" target="_blank">
           <div class="team-card" id="avinash">
-            <img src="./assets/img/team/avinash.png" class="img-fluid" alt="Team Member">
+            <img src="./assets/img/team/avinash.jpg" class="img-fluid" alt="Team Member">
             <h4 class="mt-3">Avinash M</h4>
             <p class="text-muted"><b>Lead | Coding Custodian</b></p>
           </div>
@@ -557,7 +557,7 @@
       <div class="col-lg-3 col-md-4 col-sm-6">
         <a href="https://www.linkedin.com/in/bala-pramithran-r-0320b1295/" target="_blank">
           <div class="team-card" id="bala">
-            <img src="./assets/img/team/bala.png" class="img-fluid" alt="Team Member">
+            <img src="./assets/img/team/bala.jpg" class="img-fluid" alt="Team Member">
             <h4 class="mt-3">Bala Pramithran R</h4>
             <p class="text-muted"><b>Lead | Outreach Strategist</b></p>
           </div>
@@ -577,7 +577,7 @@
       <div class="col-lg-3 col-md-4 col-sm-6">
         <a href="https://www.linkedin.com/in/uvashree-s-607910300/" target="_blank">
           <div class="team-card" id="uva">
-            <img src="./assets/img/team/uvashree.png" class="img-fluid" alt="Team Member">
+            <img src="./assets/img/team/uvashree.jpg" class="img-fluid" alt="Team Member">
             <h4 class="mt-3">Uvashree S</h4>
             <p class="text-muted"><b>Lead | Community Steward</b></p>
           </div>
