Fix mobile navbar visibility on meetup page

--- a/meetup.html
+++ b/meetup.html
@@ -458,10 +458,10 @@ body.page-loaded {
   background: rgba(0, 0, 0, 0.95);
 } */
 
-/* FORCE navbar to follow header */
+/* FORCE navbar to follow header 
 #header #navbar {
-  position: static !important;   /* important */
-}
+  position: static;   /* important 
+}*/
 
 
 
@@ -936,6 +936,7 @@ body.page-loaded {
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/main.js"></script>
     <script src="./assets/js/meetup.js"></script>
      <script>
   AOS.init({
