Fix visibility of icons with social link in footer of meetup page

--- a/meetup.html
+++ b/meetup.html
@@ -576,6 +576,9 @@ body.page-loaded {
   width: fit-content;
   max-width: 100%;
 }
+#footer .social-links i {
+  color: #ffffff !important;
+}
 
 #header {
   position: fixed;
@@ -645,7 +648,7 @@ body.page-loaded {
         <h3 class="display-5 fw-bold text-body-emphasis">Weekly Meetups</h3>
         <div class="col-lg-6 mx-auto">
           <p class="lead mb-4 text-body-emphasis">
-            Every week we gather to learn ,share our thoughts togather...
+            Every week we gather to learn ,share our thoughts together...
           </p>
         </div>
       </div>
