Fix visibility of phone number in footer of meetup page

--- a/meetup.html
+++ b/meetup.html
@@ -867,7 +867,7 @@ body.page-loaded {
                 Bangalore Trunk Road,<br>
                 Varadharajapuram, Poonamallee <br>
                 Chennai - 600 123 <br><br>
-                <i class="bi bi-telephone" style = "color : #ffc451 ;"></i> &nbsp; <span style = "font-family : 'Consolas' ;">+91 93846 78960</span><br>
+                <i class="bi bi-telephone" style = "color : #ffc451 ;"></i> &nbsp; <span style = "color: #fff; font-family : 'Consolas';">+91 93846 78960</span><br>
                 <i class="bi bi-envelope" style = "color : #ffc451 ;"></i> &nbsp; <a href="mailto:coders_forum@outlook.com" style = "color: #fff; font-family : 'Consolas' ;">coders_forum@outlook.com</a><br>
             </p>
 
