--- a/events.html
+++ b/events.html
@@ -46,7 +46,7 @@
 
   
   <link rel="stylesheet" href="./assets/css/events.css" />
-  <link href="assets/css/style.css" rel="stylesheet">
+  <link href="assets/css/style.css" rel="stylesheet" />
   <style>
     
 #header {
@@ -500,8 +500,13 @@ body.page-transition {
     width: auto;
   }
 }
-
-
+.navbar-mobile {
+  position: fixed !important;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.95);
+  z-index: 9999;
+}
 
   </style>
 
