--- a/events.html
+++ b/events.html
@@ -501,12 +501,13 @@ body.page-transition {
   }
 }
 .navbar-mobile {
-  position: fixed !important;
+  po
+  sition: fixed !important;
   width: 100vw;
   height: 100vh;
   background: rgba(0, 0, 0, 0.95);
   z-index: 9999;
-}
+};
 
   </style>
 
