--- a/events.html
+++ b/events.html
@@ -501,8 +501,7 @@ body.page-transition {
   }
 }
 .navbar-mobile {
-  po
-  sition: fixed !important;
+  position: fixed !important;
   width: 100vw;
   height: 100vh;
   background: rgba(0, 0, 0, 0.95);
