fix syntax error in pratice page css

--- a/practice.html
+++ b/practice.html
@@ -413,7 +413,7 @@
 
     #header{
       background:#050509 !important;
-      height: 80px
+      height: 80px;
       display:flex;
       align-items:center;
       position :fixed;
